--- a/README.html
+++ b/README.html
@@ -126,6 +126,8 @@ $(document).ready(function () {
 
 <div id="johns-hopkins-covid-19-dygraphs" class="section level1">
 <h1>Johns Hopkins Covid-19 dygraphs</h1>
+<p>Run the app here:</p>
+<p><a href="https://dgolicher.shinyapps.io/Johns_hopkins_dygraphs/" class="uri">https://dgolicher.shinyapps.io/Johns_hopkins_dygraphs/</a></p>
 <p>The shiny app runs by scraping data from</p>
 <p><a href="https://raw.githubusercontent.com/CSSEGISandData/COVID-19/master/csse_covid_19_data/csse_covid_19_time_series" class="uri">https://raw.githubusercontent.com/CSSEGISandData/COVID-19/master/csse_covid_19_data/csse_covid_19_time_series</a></p>
 <p>Results are then displayed mainly through use of the dygraphs package in R</p>
